--- a/src/app/locales/es/home.json
+++ b/src/app/locales/es/home.json
@@ -1,6 +1,4 @@
 {
-  "title": "Bienvenidos a Zazu",
-  "description": "Zazu es una herramienta para gestionar reservas de manera eficiente. Ideal para cualquier negocio, ayuda a programar citas y seguir la disponibilidad sin esfuerzo.",
-  "button": "Empezar",
-  "updateCookiePreferences": "Actualizar preferencias de cookies"
+  "welcomeEnter": "Bienvenidos a",
+  "weddingEnter": "la boda de Mauricio y Kiana"
 }
