--- a/src/app/locales/es/home.json
+++ b/src/app/locales/es/home.json
@@ -1,3 +1,7 @@
 {
+  "continue": "Continuar",
+  "labelName": "Ingresa tu nombre y apellido",
+  "name": "Nombre",
+  "placeholderName": "Escribe aquí..",
   "weddingEnter": "la boda de Mauricio y Kiana"
 }
