looking at a different approach

--- a/src/app/locales/en/home.json
+++ b/src/app/locales/en/home.json
@@ -3,5 +3,5 @@
   "labelName": "Enter your name and last name",
   "name": "Name",
   "placeholderName": "Type here..",
-  "weddingEnter": "Mauricio and Kiana's wedding"
+  "weddingEnter": "Mauricio & Kiana"
 }
