--- a/src/app/locales/es/home.json
+++ b/src/app/locales/es/home.json
@@ -3,5 +3,5 @@
   "labelName": "Ingresa tu nombre y apellido",
   "name": "Nombre",
   "placeholderName": "Escribe aquí..",
-  "weddingEnter": "la boda de Mauricio y Kiana"
+  "weddingEnter": "Mauricio & Kiana"
 }
