adding bold words

--- a/src/app/locales/en/home.json
+++ b/src/app/locales/en/home.json
@@ -5,8 +5,8 @@
   "formErrorMessage": "We couldn't find your name on the guest list, please check that you have written it correctly.",
   "labelName": "Enter your name and last name",
   "loading": "Loading",
-  "messageDate": "On March 21st, we'll mark the day our <0>yes</0> becomes a <0>forever.</0>",
-  "messageWhere": "Of all the places in the world, <0>La Paz, Bolivia</0> will be the one we remember as the <0>beginning of everything</0>",
+  "messageDate": "On March 21st, we'll mark the day our <bold>yes</bold> becomes a <bold>forever.</bold>",
+  "messageWhere": "Of all the places in the world, <bold>La Paz, Bolivia</bold> will be the one we remember as the <bold>beginning of everything</bold>",
   "name": "Name",
   "placeholderName": "Type here..",
   "saveDate": "Save the date",
