missing spanish words

--- a/src/app/locales/es/home.json
+++ b/src/app/locales/es/home.json
@@ -5,8 +5,8 @@
   "formErrorMessage": "No hemos encontrado tu nombre en la lista de invitados, por favor verifica que lo hayas escrito correctamente.",
   "labelName": "Ingresa tu Nombre y Apellido",
   "loading": "Cargando",
-  "messageDate": "El 21 de marzo marcaremos el día en que el <0>sí</0> se convertirá en un <0>para siempre.</0>",
-  "messageWhere": "De tantos lugares en el mundo, <0>La Paz. Bolivia</0>, será el que recordemos como el <0>inicio de todo</0>.",
+  "messageDate": "El 21 de marzo marcaremos el día en que el <bold>sí</bold> se convertirá en un <bold>para siempre.</bold>",
+  "messageWhere": "De tantos lugares en el mundo, <bold>La Paz. Bolivia</bold>, será el que recordemos como el <bold>inicio de todo</bold>.",
   "name": "Nombre",
   "placeholderName": "Escribe aquí..",
   "saveDate": "Guarda la fecha",
