--- a/src/app/locales/en/home.json
+++ b/src/app/locales/en/home.json
@@ -2,17 +2,27 @@
   "authenticated": "Authenticated",
   "confirm": "Confirm",
   "continue": "Continue",
+  "date": "March 21, 2026",
   "formErrorMessage": "We couldn't find your name on the guest list, please check that you have written it correctly.",
+  "formQuestion": "<bold>{{name}}</bold>! Although there are many details missing, we want to know if you will attend our wedding.",
+  "formalInvitation": "Formal Invitation",
+  "soon": "Soon",
   "labelName": "Enter your name and last name",
   "loading": "Loading",
+  "maybe": "I don't know yet",
   "messageDate": "On March 21st, we'll mark the day our <bold>yes</bold> becomes a <bold>forever.</bold>",
   "messageWhere": "Of all the places in the world, <bold>La Paz, Bolivia</bold> will be the one we remember as the <bold>beginning of everything</bold>",
   "name": "Name",
+  "no": "I can't attend",
   "placeholderName": "Type here..",
   "saveDate": "Save the date",
   "select": "Select an option",
   "selectYourName": "Select your name from the list",
   "weGotMarried": "We're Tying the Knot!",
   "weddingNames": "Mauricio & Kiana",
-  "where": "Where?"
+  "where": "Where?",
+  "yes": "I will attend",
+  "confirmMessage": "We are so excited to have you as part of our special day!",
+  "declineMessage": "We understand and we will miss you but we still want to be part of our wedding by sharing a link to connect via video call",
+  "maybeMessage": "No problem, you have time to decide"
 }
