--- a/src/app/locales/es/home.json
+++ b/src/app/locales/es/home.json
@@ -2,17 +2,27 @@
   "authenticated": "Autenticado",
   "confirm": "Confirmar",
   "continue": "Continuar",
+  "date": "21 de marzo, 2026",
   "formErrorMessage": "No hemos encontrado tu nombre en la lista de invitados, por favor verifica que lo hayas escrito correctamente.",
+  "formQuestion": "<bold>{{name}}</bold>! Aun que faltan muchos detalles, queremos saber que asistirás a nuestra boda.",
+  "formalInvitation": "Invitación Formal",
+  "soon": "Proximamente",
   "labelName": "Ingresa tu Nombre y Apellido",
   "loading": "Cargando",
+  "maybe": "Aun no lo sé",
   "messageDate": "El 21 de marzo marcaremos el día en que el <bold>sí</bold> se convertirá en un <bold>para siempre.</bold>",
   "messageWhere": "De tantos lugares en el mundo, <bold>La Paz. Bolivia</bold>, será el que recordemos como el <bold>inicio de todo</bold>.",
   "name": "Nombre",
+  "no": "No podre asistir",
   "placeholderName": "Escribe aquí..",
   "saveDate": "Guarda la fecha",
   "select": "Selecciona una opción",
   "selectYourName": "Selecciona tu nombre en la lista",
   "weGotMarried": "¡Nos Casamos!",
   "weddingNames": "Mauricio & Kiana",
-  "where": "¿Donde?"
+  "where": "¿Donde?",
+  "yes": "Si asistiré",
+  "confirmMessage": "¡Estamos muy emocionados de que formes parte de nuestro día especial!",
+  "declineMessage": "Entendemos y te extrañaremos pero todavía queremos hacerte parte de nuestra boda compartiendo un enlace para que te conectes por video llamada",
+  "maybeMessage": "No hay problema, tienes aun tiempo para decidirte"
 }
