--- a/src/app/locales/en/home.json
+++ b/src/app/locales/en/home.json
@@ -11,7 +11,7 @@
   "loading": "Loading",
   "maybe": "I don't know yet",
   "messageDate": "On March 21st, we'll mark the day our <bold>yes</bold> becomes a <bold>forever.</bold>",
-  "messageWhere": "Of all the places in the world, <bold>La Paz, Bolivia</bold> will be the one we remember as the <bold>beginning of everything</bold>",
+  "messageWhere": "Of all the places in the world, <bold>La Paz, Bolivia</bold>🇧🇴 will be the one we remember as the <bold>beginning of everything</bold>",
   "name": "Name",
   "no": "I can't attend",
   "placeholderName": "Type here..",
