--- a/src/app/locales/es/home.json
+++ b/src/app/locales/es/home.json
@@ -11,7 +11,7 @@
   "loading": "Cargando",
   "maybe": "Aun no lo sé",
   "messageDate": "El 21 de marzo marcaremos el día en que el <bold>sí</bold> se convertirá en un <bold>para siempre.</bold>",
-  "messageWhere": "De tantos lugares en el mundo, <bold>La Paz. Bolivia</bold>, será el que recordemos como el <bold>inicio de todo</bold>.",
+  "messageWhere": "De tantos lugares en el mundo, <bold>La Paz. Bolivia</bold>🇧🇴, será el que recordemos como el <bold>inicio de todo</bold>.",
   "name": "Nombre",
   "no": "No podre asistir",
   "placeholderName": "Escribe aquí..",
