--- a/src/app/locales/en/home.json
+++ b/src/app/locales/en/home.json
@@ -23,6 +23,6 @@
   "where": "Where?",
   "yes": "I will attend",
   "confirmMessage": "We are so excited to have you as part of our special day!",
-  "declineMessage": "We understand and we will miss you but we still want to be part of our wedding by sharing a link to connect via video call",
-  "maybeMessage": "No problem, you have time to decide"
+  "declineMessage": "We will miss you, but if you still want to participate virtually, we will share a link where the ceremony will be broadcasted",
+  "maybeMessage": "No problem, you have time to decide. Confirm as soon as you can to be part of our day."
 }
