--- a/src/app/locales/es/home.json
+++ b/src/app/locales/es/home.json
@@ -23,6 +23,6 @@
   "where": "¿Donde?",
   "yes": "Si asistiré",
   "confirmMessage": "¡Estamos muy emocionados de que formes parte de nuestro día especial!",
-  "declineMessage": "Entendemos y te extrañaremos pero todavía queremos hacerte parte de nuestra boda compartiendo un enlace para que te conectes por video llamada",
-  "maybeMessage": "No hay problema, tienes aun tiempo para decidirte"
+  "declineMessage": "Te extrañaremos, pero si de todas formas quieres participar de manera virtual, compartiremos un link donde se transmitirá la ceremonia",
+  "maybeMessage": "No hay problema, aún queda tiempo. Confirma apenas puedas para tenerte en cuenta"
 }
