--- a/src/app/locales/es/home.json
+++ b/src/app/locales/es/home.json
@@ -7,7 +7,7 @@
   "formQuestion": "<bold>{{name}}</bold>! Aun que faltan muchos detalles, queremos saber que asistirás a nuestra boda.",
   "formalInvitation": "Invitación Formal",
   "soon": "Proximamente",
-  "labelName": "Ingresa tu Nombre y Apellido",
+  "labelName": "Nombre y Apellido",
   "loading": "Cargando",
   "maybe": "Aun no lo sé",
   "messageDate": "El 21 de marzo marcaremos el día en que el <bold>sí</bold> se convertirá en un <bold>para siempre.</bold>",
