--- a/src/app/locales/en/home.json
+++ b/src/app/locales/en/home.json
@@ -1,28 +1,34 @@
 {
   "authenticated": "Authenticated",
   "confirm": "Confirm",
+  "confirmMessage": "We are so excited to have you as part of our special day!",
   "continue": "Continue",
   "date": "March 21, 2026",
+  "declineMessage": "We will miss you, but if you still want to participate virtually, we will share a link where the ceremony will be broadcasted",
   "formErrorMessage": "We couldn't find your name on the guest list, please check that you have written it correctly.",
   "formQuestion": "<bold>{{name}}</bold>! Although there are many details missing, we want to know if you will attend our wedding.",
   "formalInvitation": "Formal Invitation",
-  "soon": "Soon",
   "labelName": "name and last name",
-  "loading": "Loading",
+  "loading": "Loading...",
   "maybe": "I don't know yet",
+  "maybeMessage": "No problem, you have time to decide. Confirm as soon as you can to be part of our day.",
   "messageDate": "On March 21st, we'll mark the day our <bold>yes</bold> becomes a <bold>forever.</bold>",
   "messageWhere": "Of all the places in the world, <bold>La Paz, Bolivia</bold>🇧🇴 will be the one we remember as the <bold>beginning of everything</bold>",
   "name": "Name",
-  "no": "I can't attend",
+  "no": "No",
+  "noAttending": "I can't attend",
   "placeholderName": "Type here..",
+  "plusOne": "Will you attend with a plus one?",
   "saveDate": "Save the date",
   "select": "Select an option",
   "selectYourName": "Select your name from the list",
+  "soon": "Soon",
   "weGotMarried": "We're Tying the Knot!",
+  "wedding": "Wedding",
   "weddingNames": "Mauricio & Kiana",
   "where": "Where?",
-  "yes": "I will attend",
-  "confirmMessage": "We are so excited to have you as part of our special day!",
-  "declineMessage": "We will miss you, but if you still want to participate virtually, we will share a link where the ceremony will be broadcasted",
-  "maybeMessage": "No problem, you have time to decide. Confirm as soon as you can to be part of our day."
+  "yes": "Yes",
+  "yesAttending": "I will attend",
+  "selectNumberOfPeople": "Select the number of people, including yourself",
+  "choose": "Choose"
 }
