--- a/src/app/locales/es/home.json
+++ b/src/app/locales/es/home.json
@@ -1,28 +1,34 @@
 {
   "authenticated": "Autenticado",
   "confirm": "Confirmar",
+  "confirmMessage": "¡Estamos muy emocionados de que formes parte de nuestro día especial!",
   "continue": "Continuar",
   "date": "21 de marzo, 2026",
+  "declineMessage": "Te extrañaremos, pero si de todas formas quieres participar de manera virtual, compartiremos un link donde se transmitirá la ceremonia",
   "formErrorMessage": "No hemos encontrado tu nombre en la lista de invitados, por favor verifica que lo hayas escrito correctamente.",
   "formQuestion": "<bold>{{name}}</bold>! Aun que faltan muchos detalles, queremos saber que asistirás a nuestra boda.",
   "formalInvitation": "Invitación Formal",
-  "soon": "Proximamente",
   "labelName": "Nombre y Apellido",
-  "loading": "Cargando",
+  "loading": "Cargando...",
   "maybe": "Aun no lo sé",
+  "maybeMessage": "No hay problema, aún queda tiempo. Confirma apenas puedas para tenerte en cuenta",
   "messageDate": "El 21 de marzo marcaremos el día en que el <bold>sí</bold> se convertirá en un <bold>para siempre.</bold>",
   "messageWhere": "De tantos lugares en el mundo, <bold>La Paz. Bolivia</bold>🇧🇴, será el que recordemos como el <bold>inicio de todo</bold>.",
   "name": "Nombre",
-  "no": "No podre asistir",
+  "no": "No",
+  "noAttending": "No podre asistir",
   "placeholderName": "Escribe aquí..",
+  "plusOne": "¿Vienes con un acompañante?",
   "saveDate": "Guarda la fecha",
   "select": "Selecciona una opción",
   "selectYourName": "Selecciona tu nombre en la lista",
+  "soon": "Proximamente",
   "weGotMarried": "¡Nos Casamos!",
+  "wedding": "Boda",
   "weddingNames": "Mauricio & Kiana",
   "where": "¿Donde?",
-  "yes": "Si asistiré",
-  "confirmMessage": "¡Estamos muy emocionados de que formes parte de nuestro día especial!",
-  "declineMessage": "Te extrañaremos, pero si de todas formas quieres participar de manera virtual, compartiremos un link donde se transmitirá la ceremonia",
-  "maybeMessage": "No hay problema, aún queda tiempo. Confirma apenas puedas para tenerte en cuenta"
+  "yes": "Si",
+  "yesAttending": "Asistiré",
+  "selectNumberOfPeople": "Selecciona el número de personas, incluyendote a ti",
+  "choose": "Selecciona"
 }
