feature: improvement made it

--- a/src/app/locales/en/home.json
+++ b/src/app/locales/en/home.json
@@ -1,19 +1,21 @@
 {
   "authenticated": "Authenticated",
+  "choose": "Choose",
   "confirm": "Confirm",
   "confirmMessage": "We are so excited to have you as part of our special day!",
   "continue": "Continue",
   "date": "March 21, 2026",
   "declineMessage": "We will miss you, but if you still want to participate virtually, we will share a link where the ceremony will be broadcasted",
   "formErrorMessage": "We couldn't find your name on the guest list, please check that you have written it correctly.",
-  "formQuestion": "<bold>{{name}}</bold>! Although there are many details missing, we want to know if you will attend our wedding.",
+  "formQuestion": "Although there are many details missing, we want to know if you will attend our wedding.",
   "formalInvitation": "Formal Invitation",
   "labelName": "name and last name",
-  "loading": "Loading...",
+  "loading": "Loading",
+  "location": "La Paz, Bolivia",
   "maybe": "I don't know yet",
   "maybeMessage": "No problem, you have time to decide. Confirm as soon as you can to be part of our day.",
-  "messageDate": "On March 21st, we'll mark the day our <bold>yes</bold> becomes a <bold>forever.</bold>",
-  "messageWhere": "Of all the places in the world, <bold>La Paz, Bolivia</bold>🇧🇴 will be the one we remember as the <bold>beginning of everything</bold>",
+  "message": "We are excited to imagine that day surrounded by those we love.",
+  "messageDate": "<bold>March 21st, 2026</bold> we get married in <bold>La Paz, Bolivia</bold>",
   "name": "Name",
   "no": "No",
   "noAttending": "I can't attend",
@@ -21,6 +23,7 @@
   "plusOne": "Will you attend with a plus one?",
   "saveDate": "Save the date",
   "select": "Select an option",
+  "selectNumberOfPeople": "We have {{people}} spaces reserved",
   "selectYourName": "Select your name from the list",
   "soon": "Soon",
   "weGotMarried": "We're Tying the Knot!",
@@ -29,6 +32,5 @@
   "where": "Where?",
   "yes": "Yes",
   "yesAttending": "I will attend",
-  "selectNumberOfPeople": "Select the number of people, including yourself",
-  "choose": "Choose"
+  "addressToSend": "to the name of: <font>{{name}}</font>"
 }
