--- a/src/app/locales/es/home.json
+++ b/src/app/locales/es/home.json
@@ -1,19 +1,21 @@
 {
   "authenticated": "Autenticado",
+  "choose": "Selecciona",
   "confirm": "Confirmar",
   "confirmMessage": "¡Estamos muy emocionados de que formes parte de nuestro día especial!",
   "continue": "Continuar",
   "date": "21 de marzo, 2026",
   "declineMessage": "Te extrañaremos, pero si de todas formas quieres participar de manera virtual, compartiremos un link donde se transmitirá la ceremonia",
   "formErrorMessage": "No hemos encontrado tu nombre en la lista de invitados, por favor verifica que lo hayas escrito correctamente.",
-  "formQuestion": "<bold>{{name}}</bold>! Aun que faltan muchos detalles, queremos saber que asistirás a nuestra boda.",
+  "formQuestion": "Aun que faltan muchos detalles, queremos saber que asistirás a nuestra boda.",
   "formalInvitation": "Invitación Formal",
   "labelName": "Nombre y Apellido",
-  "loading": "Cargando...",
+  "loading": "Cargando",
+  "location": "La Paz, Bolivia",
   "maybe": "Aun no lo sé",
   "maybeMessage": "No hay problema, aún queda tiempo. Confirma apenas puedas para tenerte en cuenta",
-  "messageDate": "El 21 de marzo marcaremos el día en que el <bold>sí</bold> se convertirá en un <bold>para siempre.</bold>",
-  "messageWhere": "De tantos lugares en el mundo, <bold>La Paz. Bolivia</bold>🇧🇴, será el que recordemos como el <bold>inicio de todo</bold>.",
+  "message": "Nos emociona imaginar ese día rodeados de quienes más queremos.",
+  "messageDate": "<bold>El 21 de marzo de 2026</bold> nos casamos en <bold>La Paz. Bolivia</bold>",
   "name": "Nombre",
   "no": "No",
   "noAttending": "No podre asistir",
@@ -21,14 +23,14 @@
   "plusOne": "¿Vienes con un acompañante?",
   "saveDate": "Guarda la fecha",
   "select": "Selecciona una opción",
+  "selectNumberOfPeople": "Tenemos {{people}} espacios reservados",
   "selectYourName": "Selecciona tu nombre en la lista",
   "soon": "Proximamente",
-  "weGotMarried": "¡Nos Casamos!",
+  "weGotMarried": "Se acerca el gran dia!",
   "wedding": "Boda",
   "weddingNames": "Mauricio & Kiana",
   "where": "¿Donde?",
   "yes": "Si",
   "yesAttending": "Asistiré",
-  "selectNumberOfPeople": "Selecciona el número de personas, incluyendote a ti",
-  "choose": "Selecciona"
+  "addressToSend": "a nombre de: <font>{{name}}</font>"
 }
