feature: reaching the final

--- a/src/app/locales/en/home.json
+++ b/src/app/locales/en/home.json
@@ -1,4 +1,5 @@
 {
+  "addressToSend": "to the name of: <font>{{name}}</font>",
   "authenticated": "Authenticated",
   "choose": "Choose",
   "confirm": "Confirm",
@@ -9,7 +10,7 @@
   "formErrorMessage": "We couldn't find your name on the guest list, please check that you have written it correctly.",
   "formQuestion": "Although there are many details missing, we want to know if you will attend our wedding.",
   "formalInvitation": "Formal Invitation",
-  "labelName": "name and last name",
+  "labelName": "type your name and last name",
   "loading": "Loading",
   "location": "La Paz, Bolivia",
   "maybe": "I don't know yet",
@@ -20,17 +21,23 @@
   "no": "No",
   "noAttending": "I can't attend",
   "placeholderName": "Type here..",
-  "plusOne": "Will you attend with a plus one?",
+  "plusOne": "{{name}}, Will you attend with a plus one?  👀",
+  "remember": "<bold>Remember:</bold> you can change your answer before <bold>December 20th, 2025</bold>.",
   "saveDate": "Save the date",
   "select": "Select an option",
-  "selectNumberOfPeople": "We have {{people}} spaces reserved",
+  "numberOfPeople": "We have {{people}} spaces reserved",
+  "selectNumberOfPeople": "Select the number of people",
   "selectYourName": "Select your name from the list",
   "soon": "Soon",
   "weGotMarried": "We're Tying the Knot!",
   "wedding": "Wedding",
-  "weddingNames": "Mauricio & Kiana",
+  "weddingNames": "Kiana & Mauricio",
   "where": "Where?",
   "yes": "Yes",
   "yesAttending": "I will attend",
-  "addressToSend": "to the name of: <font>{{name}}</font>"
+  "person": "person",
+  "people": "people",
+  "child": "child",
+  "children": "children",
+  "selectNumberOfChildren": "Select the number of children"
 }
