--- a/src/app/locales/es/home.json
+++ b/src/app/locales/es/home.json
@@ -1,4 +1,5 @@
 {
+  "addressToSend": "a nombre de: <font>{{name}}</font>",
   "authenticated": "Autenticado",
   "choose": "Selecciona",
   "confirm": "Confirmar",
@@ -9,7 +10,7 @@
   "formErrorMessage": "No hemos encontrado tu nombre en la lista de invitados, por favor verifica que lo hayas escrito correctamente.",
   "formQuestion": "Aun que faltan muchos detalles, queremos saber que asistirás a nuestra boda.",
   "formalInvitation": "Invitación Formal",
-  "labelName": "Nombre y Apellido",
+  "labelName": "escribe tu nombre y apellido",
   "loading": "Cargando",
   "location": "La Paz, Bolivia",
   "maybe": "Aun no lo sé",
@@ -20,17 +21,23 @@
   "no": "No",
   "noAttending": "No podre asistir",
   "placeholderName": "Escribe aquí..",
-  "plusOne": "¿Vienes con un acompañante?",
+  "plusOne": "<bold>{{name}}</bold>, ¿Vienes con un acompañante? 👀",
+  "remember": "<bold>Recuerda:</bold> puedes cambiar tu respuesta antes del <bold>20 de diciembre de 2025</bold>.",
   "saveDate": "Guarda la fecha",
   "select": "Selecciona una opción",
-  "selectNumberOfPeople": "Tenemos {{people}} espacios reservados",
+  "numberOfPeople": "Tenemos <bold>{{people}}</bold> espacios reservados",
+  "selectNumberOfPeople": "Selecciona el número de personas",
   "selectYourName": "Selecciona tu nombre en la lista",
   "soon": "Proximamente",
   "weGotMarried": "Se acerca el gran dia!",
   "wedding": "Boda",
-  "weddingNames": "Mauricio & Kiana",
+  "weddingNames": "Kiana & Mauricio",
   "where": "¿Donde?",
   "yes": "Si",
   "yesAttending": "Asistiré",
-  "addressToSend": "a nombre de: <font>{{name}}</font>"
+  "person": "persona",
+  "people": "personas",
+  "child": "niño",
+  "children": "niños",
+  "selectNumberOfChildren": "Selecciona el número de niños"
 }
