--- a/src/app/locales/en/home.json
+++ b/src/app/locales/en/home.json
@@ -1,6 +1,8 @@
 {
-  "addressToSend": "to the name of: <font>{{name}}</font>",
+  "addressToSend": "to the name of: <br/> <font>{{name}}</font>",
   "authenticated": "Authenticated",
+  "child": "child",
+  "children": "children",
   "choose": "Choose",
   "confirm": "Confirm",
   "confirmMessage": "We are so excited to have you as part of our special day!",
@@ -19,25 +21,24 @@
   "messageDate": "<bold>March 21st, 2026</bold> we get married in <bold>La Paz, Bolivia</bold>",
   "name": "Name",
   "no": "No",
-  "noAttending": "I can't attend",
+  "noAttending": "I can't",
+  "people": "people",
+  "person": "person",
   "placeholderName": "Type here..",
-  "plusOne": "{{name}}, Will you attend with a plus one?  👀",
-  "remember": "<bold>Remember:</bold> you can change your answer until <bold>December 10th, 2025</bold>.",
+  "plusOne": "{{name}}, Will you attend with a plus one? 👀",
+  "remember": "<bold>Remember:</bold> you can change your answer until <br/> <bold>December 10th, 2025</bold>.",
   "saveDate": "Save the date",
   "select": "Select an option",
-  "numberOfPeople": "We have {{people}} spaces reserved",
+  "selectNumberOfChildren": "Children < 7 years",
   "selectNumberOfPeople": "People",
   "selectYourName": "Select your name from the list",
   "soon": "To follow",
+  "spaceReserved": "spaces reserved",
   "weGotMarried": "We're Tying the Knot!",
+  "weHave": "We have",
   "wedding": "Wedding",
   "weddingNames": "Kiana & Mauricio",
   "where": "Where?",
   "yes": "Yes",
-  "yesAttending": "I will attend",
-  "person": "person",
-  "people": "people",
-  "child": "child",
-  "children": "children",
-  "selectNumberOfChildren": "Children < 7 years"
+  "yesAttending": "I'll attend"
 }
