--- a/src/app/locales/es/home.json
+++ b/src/app/locales/es/home.json
@@ -1,6 +1,8 @@
 {
   "addressToSend": "a nombre de: <br/> <font>{{name}}</font>",
   "authenticated": "Autenticado",
+  "child": "niño",
+  "children": "niños",
   "choose": "Selecciona",
   "confirm": "Confirmar",
   "confirmMessage": "¡Estamos muy emocionados de que formes parte de nuestro día especial!",
@@ -20,24 +22,23 @@
   "name": "Nombre",
   "no": "No",
   "noAttending": "No asistiré",
+  "people": "personas",
+  "person": "persona",
   "placeholderName": "Escribe aquí..",
   "plusOne": "<bold>{{name}}</bold>, ¿Vienes con un acompañante? 👀",
-  "remember": "<bold>Recuerda:</bold> puedes cambiar tu respuesta <bold>hasta el 10 de diciembre de 2025</bold>.",
+  "remember": "<bold>Recuerda:</bold> puedes cambiar tu respuesta <br/> <bold>hasta el 10 de diciembre de 2025</bold>.",
   "saveDate": "Guarda la fecha",
   "select": "Selecciona una opción",
-  "numberOfPeople": "Tenemos <bold>{{people}}</bold> espacios reservados",
+  "selectNumberOfChildren": "Niños < 7 años",
   "selectNumberOfPeople": "Personas",
   "selectYourName": "Selecciona tu nombre en la lista",
   "soon": "Proximamente",
+  "spaceReserved": "espacios reservados",
   "weGotMarried": "Se acerca el gran dia!",
+  "weHave": "Tenemos",
   "wedding": "Boda",
   "weddingNames": "Kiana & Mauricio",
   "where": "¿Donde?",
   "yes": "Si",
-  "yesAttending": "Asistiré",
-  "person": "persona",
-  "people": "personas",
-  "child": "niño",
-  "children": "niños",
-  "selectNumberOfChildren": "Niños < 7 años"
+  "yesAttending": "Asistiré"
 }
