--- a/src/app/locales/es/home.json
+++ b/src/app/locales/es/home.json
@@ -10,7 +10,7 @@
   "date": "21 de marzo, 2026",
   "declineMessage": "Te extrañaremos, pero si de todas formas quieres participar de manera virtual, compartiremos un link donde se transmitirá la ceremonia",
   "formErrorMessage": "No hemos encontrado tu nombre en la lista de invitados, por favor verifica que lo hayas escrito correctamente.",
-  "formQuestion": "Aunque aún seguimos planeando algunos detalles, queremos saber si podrás acompañarnos",
+  "formQuestion": "Aún estamos planeando algunos detalles, pero queremos saber si podrás acompañarnos",
   "formalInvitation": "Invitación Formal",
   "labelName": "escribe tu nombre y apellido",
   "loading": "Cargando",
@@ -18,7 +18,7 @@
   "maybe": "Aun no lo sé",
   "maybeMessage": "No hay problema, aún queda tiempo. Confirma apenas puedas para tenerte en cuenta",
   "message": "Nos emociona imaginar ese día rodeados de quienes más queremos.",
-  "messageDate": "<bold>El 21 de marzo de 2026</bold> nos casamos en <bold>La Paz. Bolivia</bold>",
+  "messageDate": "<bold>El 21 de marzo de 2026</bold> nos casamos en <bold>la Paz, Bolivia</bold>",
   "name": "Nombre",
   "no": "No",
   "noAttending": "No asistiré",
