spelling error fixd

--- a/src/app/locales/es/home.json
+++ b/src/app/locales/es/home.json
@@ -15,7 +15,7 @@
   "labelName": "escribe tu nombre y apellido",
   "loading": "Cargando",
   "location": "La Paz, Bolivia",
-  "maybe": "Aun no lo sé",
+  "maybe": "Aún no lo sé",
   "maybeMessage": "No hay problema, aún queda tiempo. Confirma apenas puedas para tenerte en cuenta",
   "message": "Nos emociona imaginar ese día rodeados de quienes más queremos.",
   "messageDate": "<bold>El 21 de marzo de 2026</bold> nos casamos en <bold>la Paz, Bolivia</bold>",
@@ -38,8 +38,8 @@
   "weHave": "Tenemos",
   "wedding": "Boda",
   "weddingNames": "Kiana & Mauricio",
-  "where": "¿Donde?",
-  "yes": "Si",
+  "where": "¿Dónde?",
+  "yes": "Sí",
   "yesAttending": "Asistiré",
   "saveAnswer": "Guardar respuesta",
   "answerSaved": "Respuesta guardada"
