--- a/src/app/locales/en/home.json
+++ b/src/app/locales/en/home.json
@@ -8,7 +8,7 @@
   "confirm": "Confirm",
   "confirmMessage": "We are so excited to have you as part of our special day!",
   "continue": "Continue",
-  "date": "March 21, 2026",
+  "date": "March 21st, 2026",
   "declineMessage": "We will miss you, but if you still want to participate virtually, we will share a link where the ceremony will be broadcasted",
   "formErrorMessage": "We couldn't find your name on the guest list, please check that you have written it correctly.",
   "formQuestion": "We are still in the planning stages, but we'd love to know if you'll be able to join us.",
