fix: setting spaces

--- a/src/app/locales/en/home.json
+++ b/src/app/locales/en/home.json
@@ -2,6 +2,8 @@
   "addressToSend": "addressed to:",
   "answerSaved": "Answer saved",
   "authenticated": "Authenticated",
+  "companions": "Seats",
+  "withCompanion": "with a plus one",
   "child": "child",
   "children": "children",
   "choose": "Choose",
