--- a/src/app/locales/es/home.json
+++ b/src/app/locales/es/home.json
@@ -2,6 +2,8 @@
   "addressToSend": "a nombre de:",
   "answerSaved": "Respuesta guardada",
   "authenticated": "Autenticado",
+  "companions": "Puestos",
+  "withCompanion": "con su acompañante",
   "child": "niño",
   "children": "niños",
   "choose": "Selecciona",
