error en tildes

--- a/src/app/locales/es/home.json
+++ b/src/app/locales/es/home.json
@@ -36,9 +36,9 @@
   "selectNumberOfPeople": "Adultos",
   "selectPlusOne": "Acompañante",
   "selectYourName": "Selecciona tu nombre en la lista",
-  "soon": "Proximamente",
+  "soon": "Próximamente",
   "spaceReserved": "espacios reservados",
-  "weGotMarried": "Se acerca el gran dia!",
+  "weGotMarried": "Se acerca el gran día!",
   "weHave": "Tenemos",
   "wedding": "Boda",
   "weddingNames": "Kiana & Mauricio",
