hotChange: date moved

--- a/src/app/locales/en/home.json
+++ b/src/app/locales/en/home.json
@@ -10,7 +10,7 @@
   "confirm": "Confirm",
   "confirmMessage": "We are so excited to have you as part of our special day!",
   "continue": "Continue",
-  "date": "March 21st, 2026",
+  "date": "March 27th, 2026",
   "declineMessage": "We will miss you, but if you still want to participate virtually, we will share a link where the ceremony will be broadcasted",
   "formErrorMessage": "We couldn't find your name on the guest list, please check that you have written it correctly.",
   "formQuestion": "We are still in the planning stages, but we'd love to know if you'll be able to join us.",
@@ -21,7 +21,7 @@
   "maybe": "Unsure",
   "maybeMessage": "No problem, you have time to decide. Confirm as soon as you can to be part of our day.",
   "message": "We are excited to imagine that day surrounded by those we love.",
-  "messageDate": "<bold>March 21st, 2026</bold> we get married in <bold>La Paz, Bolivia</bold>",
+  "messageDate": "<bold>March 27th, 2026</bold> we get married in <bold>La Paz, Bolivia</bold>",
   "name": "Name",
   "no": "No",
   "noAttending": "Decline",
